ch2, tiny modification

--- a/02_production.ipynb
+++ b/02_production.ipynb
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
        "(#1) [Path('bear_clf.pkl')]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,13 +1694,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd1887f4dc9144e38b5305b7d605e9db",
+       "model_id": "1282f3def0de4e4881b9725f8e2f5fe9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1708,7 +1708,7 @@
        "FileUpload(value=(), description='Upload')"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1785,10 +1785,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f9557094640>"
+       "<matplotlib.image.AxesImage at 0x7f748c34b2b0>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1821,13 +1821,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39fbe9837ca64499a1dd70d2187521ca",
+       "model_id": "ca1f43d6108d4a19a3e5e957f08a657c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1835,7 +1835,7 @@
        "Output()"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1916,13 +1916,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d90a2e9d5af84820b84a5729de0351ef",
+       "model_id": "d457137165c44fb6b117f4801543b501",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1930,7 +1930,7 @@
        "Label(value='Prediction: teddy; Probability: 1.0000')"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,13 +1953,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "571aeb55ad0348689f45e1a6f8ef2a14",
+       "model_id": "0db032057b8a4444897fe98db7c969ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1967,7 +1967,7 @@
        "Button(description='Classify', style=ButtonStyle())"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1987,14 +1987,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def on_click_classify(change):\n",
-    "    img = PILImage.create(btn_upload.data[-1])\n",
+    "    #img = PILImage.create(btn_upload.data[-1])\n",
+    "    img = Image.open(BytesIO(btn_upload.value[-1].content))\n",
     "    out_pl.clear_output()\n",
     "    with out_pl: display(img.to_thumb(128,128))\n",
+    "    img = np.array(img)\n",
     "    pred,pred_idx,probs = learn_inf.predict(img)\n",
     "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'\n",
     "\n",
@@ -2012,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,21 +2025,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf57be2d05d7401b81201d1099b3cffb",
+       "model_id": "326e08d0301f439197874dff61707142",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Select your bear!'), FileUpload(value=(), description='Upload'), Button(descriptio…"
+       "VBox(children=(Label(value='Select your bear!'), FileUpload(value=({'name': 'Teddy-Bear-Day-640x514.jpg', 'typ…"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
